--- a/kotufas.html
+++ b/kotufas.html
@@ -12,7 +12,7 @@
 <body>
   <header>    
       <div class="logo">
-       KOTUFAS
+       KOTUFAS Group
       </div>
      <div class="menu-toggle">
   <span></span>
@@ -31,7 +31,7 @@
       <img src="https://fastly.picsum.photos/id/910/1920/1080.jpg?hmac=AtD2TkklTsPZt314CtUHANeFCSl5_Mpt4o5KfJ0spwE" alt="Hero Image">
       <div class="hero-content">
        
-        <h1>Welcome to Kotufas Project</h1>
+        <h1>Welcome to AutoKode Project</h1>
         <p>Innovacion que estalla en cada proyecto</p>
       </div>
     </section>
