Kotufas NuestroProyecto.html

--- a/Kotufas NuestroProyecto.html
+++ b/Kotufas NuestroProyecto.html
@@ -21,7 +21,7 @@
 
   <main>
     <section class="hero">
-      <img src="https://fastly.picsum.photos/id/910/1920/1080.jpg?hmac=AtD2TkklTsPZt314CtUHANeFCSl5_Mpt4o5KfJ0spwE" alt="Hero Image">
+      <img src="https://github.com/edies76/Pagina-kotufas/blob/main/imagenrepositorio.jpg?raw=true" alt="Hero Image">
       <div class="hero-content">
         <h1>Sobre Nosotros</h1>
       </div>
