--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
   <header>    
       <div class="logo">
-       KOTUFAS Group
+       KOTUFAS
       </div>
      <div class="menu-toggle">
   <span></span>
