--- a/Kotufas NuestroProyecto.html
+++ b/Kotufas NuestroProyecto.html
@@ -21,37 +21,59 @@
 
   <main>
     <section class="hero">
-      <img src="https://github.com/edies76/Pagina-kotufas/blob/main/imagenrepositorio.jpg?raw=true" alt="Hero Image">
+      <img src="https://fastly.picsum.photos/id/910/1920/1080.jpg?hmac=AtD2TkklTsPZt314CtUHANeFCSl5_Mpt4o5KfJ0spwE" alt="Hero Image">
       <div class="hero-content">
         <h1>Sobre Nosotros</h1>
       </div>
     </section>
 
     <section class="section">
-      <h2 class="section-title">NUESTRA HISTORIA</h2>
+      <h2 class="section-title">¿Quienes Somos?</h2>
       <div class="section-content">
-        <p>Nuestro proyecto fue y esta basado en solucionar una problematica que afecte a los estudiantes, y ¿Cual era? pues el tiempo, el tiempo en que sentido o aspecto, el tiempo en la tan tediosa, rigurosa y cotidiana toma de asistencias manualmente, este metodo de tomar lista, nombrar y llamar a los estudiantes 1 por 1 resulta en un trabajo que consume tiempo, un tiempo que es muy fundamental para los estudiantes en todos los sentidos e inclusos para los profesores, y aun mas en temporada de examenes o actividades importantes en la cual el tiempo es un recurso que no se puede malgastar. Esta podria ser la historia o el por que de nuestro proyecto.</p>
+        <p>
+          Somos un grupo de estudiantes del Liceo Samario apasionados por la programación y la tecnología. 
+          Nos encanta explorar nuevas herramientas y soluciones que permitan mejorar la vida cotidiana a través 
+          de la innovación tecnológica. Nuestro interés por la programación nos ha llevado a desarrollar diversas 
+          habilidades en áreas como el desarrollo web, la automatización de procesos, y la gestión de bases de datos. 
+          Creemos en el poder transformador de la tecnología y estamos comprometidos en seguir aprendiendo y creando 
+          soluciones que generen un impacto positivo en nuestra comunidad.</p> 
+      </div>
+    </section>
+
+
+    <section class="section">
+      <h2 class="section-title">Eddie Ortiz</h2>
+      <div class="section-content">
+        <p>Desarrollador de la pagina Web y programador</p> <img src="https://t3.ftcdn.net/jpg/04/19/17/68/360_F_419176802_9s4AoYMfzxDt3kaSYV55whCkTB76NsHN.jpg" alt="">
       </div>
     </section>
 
     <section class="section">
-      <h2 class="section-title">Visión</h2>
+      <h2 class="section-title">Jesus Fernandez</h2>
       <div class="section-content">
-        <p>Como grupo Kotufas, conformado por estudiantes del grado 11° de la Institución Educativa Distrital Liceo Samario de Santa Marta, Magdalena, Colombia, nos dedicamos a identificar y abordar problemas o situaciones que afectan a nuestra institución. Priorizamos la búsqueda de soluciones mediante el uso de la tecnología para mejorar la calidad de la educación y el funcionamiento general de la escuela.</p>
+        <p>Desarrollador de la pagina Web y programador</p><img src="https://t3.ftcdn.net/jpg/04/19/17/68/360_F_419176802_9s4AoYMfzxDt3kaSYV55whCkTB76NsHN.jpg" alt="">
       </div>
     </section>
 
     <section class="section">
-      <h2 class="section-title">Misión</h2>
+      <h2 class="section-title">Thomas Fernandez</h2>
       <div class="section-content">
-        <p>Como grupo Kotufas, conformado por estudiantes del grado 11° de la Institución Educativa Distrital Liceo Samario de Santa Marta, Magdalena, Colombia, nos dedicamos a identificar y abordar problemas o situaciones que afectan a nuestra institución. Priorizamos la búsqueda de soluciones mediante el uso de la tecnología para mejorar la calidad de la educación y el funcionamiento general de la escuela.</p>
+        <p>Gestor de redes sociales , comunicador social y programador</p><img src="https://t3.ftcdn.net/jpg/04/19/17/68/360_F_419176802_9s4AoYMfzxDt3kaSYV55whCkTB76NsHN.jpg" alt="">
       </div>
     </section>
 
     <section class="section">
-      <h2 class="section-title">Futuro</h2>
+      <h2 class="section-title">Nicolas Martinez</h2>
       <div class="section-content">
-        <p>En el futuro se implementara el kotufas project en todo el liceo samario, ademas se adaptara a las condiciones ambientales y tendra mayor funcionalidad y seguir con un sistema de automatizacion en entornos educativos. El kotufas project sera implementado en otros colegios y altamente reconocido por su facilidad y practicidad a la hora de usarse. </p>
+        <p>Gestor de redes sociales y programador de la pagina Web</p><img src="https://t3.ftcdn.net/jpg/04/19/17/68/360_F_419176802_9s4AoYMfzxDt3kaSYV55whCkTB76NsHN.jpg" alt="">
+      </div>
+    </section>
+
+    
+    <section class="section">
+      <h2 class="section-title">Edigarlos Vasquez</h2>
+      <div class="section-content">
+        <p>Progamador Principal</p><img src="https://t3.ftcdn.net/jpg/04/19/17/68/360_F_419176802_9s4AoYMfzxDt3kaSYV55whCkTB76NsHN.jpg" alt="">
       </div>
     </section>
 
